<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".Main"
    android:orientation="vertical"
    android:background="@color/colorBackground">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginCard"
                android:layout_marginBottom="@dimen/marginCard"
                android:layout_marginRight="@dimen/marginCard_left_right"
                android:layout_marginLeft="@dimen/marginCard_left_right"
                app:contentPadding="@dimen/paddingCard"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="@dimen/elevationCard">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dns"
                    android:textSize="@dimen/textTitleSize"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginCard"
                android:layout_marginRight="@dimen/marginCard_left_right"
                android:layout_marginLeft="@dimen/marginCard_left_right"
                app:cardElevation="@dimen/elevationCard"
                app:cardCornerRadius="@dimen/radius">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/paddingCard"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/urlSendMessageXML"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginCard"
                        android:hint="@string/dnsMessage"/>
                    <EditText
                        android:id="@+id/nameDiviceXML"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginCard"
                        android:hint="@string/namePhone"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginCard"
                        android:orientation="horizontal">
                        <CheckBox
                            android:id="@+id/checkBoxXML"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/process"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textSize"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/dataConfigXML"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/height"
                        android:layout_marginTop="@dimen/marginCard"
                        android:layout_marginLeft="@dimen/marginCard_left_right"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginCard"
                android:layout_marginRight="@dimen/marginCard_left_right"
                android:layout_marginLeft="@dimen/marginCard_left_right"
                app:contentPadding="@dimen/paddingCard"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="@dimen/elevationCard">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:textSize="@dimen/textTitleSize"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginCard"
                android:layout_marginRight="@dimen/marginCard_left_right"
                android:layout_marginLeft="@dimen/marginCard_left_right"
                app:cardElevation="@dimen/elevationCard"
                app:cardCornerRadius="@dimen/radius">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/paddingCard"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/urlReceptionMessageXML"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginCard"
                        android:hint="@string/dnsProcessMessage"/>
                    <TextView
                        android:id="@+id/dataMessageXML"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/height2"
                        android:layout_marginTop="@dimen/marginCard"
                        android:layout_marginLeft="@dimen/marginCard_left_right"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSize"
                        android:textStyle="bold"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginCard2">
                <ImageButton
                    android:id="@+id/editElementXML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="@dimen/marginCard"
                    android:background="@drawable/imagebutton"
                    android:src="@drawable/ic_border_color_white_48dp"
                    android:elevation="@dimen/elevationCard"/>

                <ImageButton
                    android:id="@+id/saveXML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="@dimen/marginCard"
                    android:background="@drawable/imagebutton"
                    android:src="@drawable/ic_save_white_48dp"
                    android:elevation="@dimen/elevationCard"/>

            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
